# edipy2-docs

./: .buildinfo  .gitignore  CMakeLists.txt  LOG.out  README.md  codecov.yaml  genindex.html  index.html  meson.build  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/fortran_src/: 01_dependencies.doctree  02_installation.doctree  edipack2.doctree  init.doctree
.doctrees/fortran_src/init/: ed_aux_funx.doctree  ed_eigenspace.doctree  ed_input_vars.doctree  ed_sector.doctree  ed_setup.doctree  ed_sparse_matrix.doctree  ed_vars_global.doctree  ed_version.doctree
.doctrees/python_api/: basicusage.doctree  edipy2.doctree  functions.doctree  globvars.doctree  installation.doctree
.doctrees/python_api/funcs/: 0_readinput.doctree  1_solver.doctree  2_bath.doctree  3_inputoutput.doctree  4_auxiliary.doctree
.github/workflows/: documentation.yml
_sources/: index.rst.txt
_sources/fortran_src/: 01_dependencies.rst.txt  02_installation.rst.txt
_sources/fortran_src/init/: ed_aux_funx.rst.txt  ed_sector.rst.txt  ed_setup.rst.txt  ed_sparse_matrix.rst.txt  ed_version.rst.txt
_sources/python_api/: basicusage.rst.txt  functions.rst.txt  globvars.rst.txt
_sources/python_api/funcs/: 3_inputoutput.rst.txt  4_auxiliary.rst.txt
_static/: documentation_options.js
_static/css/: custom.css
doc/: basicusage.rst  conf.py  functions.rst  globvars.rst  index.rst  installation.rst
doc/f2py/: crackfortran.py
doc/fortran_src/: edipack2.rst  init.rst
doc/fortran_src/init/: ed_aux_funx.rst  ed_eigenspace.rst  ed_input_vars.rst  ed_vars_global.rst
doc/funcs/: 1_solver.rst  2_bath.rst  3_inputoutput.rst  4_auxiliary.rst  auxiliary.rst  bath.rst  envinit.rst  fitting.rst  inputoutput.rst  readinput.rst  solve.rst  solver.rst
doc/python_api/: edipy2.rst  installation.rst
doc/python_api/funcs/: 0_readinput.rst  1_solver.rst  2_bath.rst
doc/sphinxfortran/: fortran_autodoc.py
etc/: edipack2.pc.in
etc/environment_modules/: module.in
fortran_src/: 01_dependencies.html  02_installation.html  edipack2.html  init.html
fortran_src/init/: ed_aux_funx.html  ed_eigenspace.html  ed_input_vars.html  ed_sector.html  ed_setup.html  ed_sparse_matrix.html  ed_vars_global.html  ed_version.html
python_api/: basicusage.html  edipy2.html  functions.html  globvars.html  installation.html
python_api/funcs/: 0_readinput.html  1_solver.html  2_bath.html  3_inputoutput.html  4_auxiliary.html
src/: CMakeLists.txt  EDIPACK2.f90  ED_AUX_FUNX.f90  ED_CHI_FUNCTIONS.f90  ED_DIAG.f90  ED_EIGENSPACE.f90  ED_GREENS_FUNCTIONS.f90  ED_HAMILTONIAN.f90  ED_INPUT_VARS.f90  ED_MAIN.f90  ED_OBSERVABLES.f90  ED_SECTOR.f90  ED_SETUP.f90  ED_SPARSE_MATRIX.f90  ED_VARS_GLOBAL.f90  ED_VERSION.f90  TODO.md  myfile.f90
src/ED_BATH/: CMakeLists.txt  ED_BATH.f90  ED_BATH_AUX.f90  ED_BATH_DIM.f90  ED_BATH_DMFT.f90  ED_BATH_FUNCTIONS.f90  ED_BATH_REPLICA.f90  ED_BATH_USER.f90  ED_FIT_BATH.f90  ED_FIT_COMMON.f90  ED_FIT_GENERAL.f90  ED_FIT_HYBRID.f90  ED_FIT_NORMAL.f90  ED_FIT_REPLICA.f90
src/ED_IO/: CMakeLists.txt  ED_IO.f90  get_dens.f90  get_docc.f90  get_doubles.f90  get_energy.f90  get_g0imp.f90  get_gand_bath.f90  get_gimp.f90  get_imp_SOC_op.f90  get_imp_dm.f90  get_mag.f90  get_neigen.f90  get_phi.f90  get_sigma.f90  print_impChi.f90  print_impG.f90  print_impG0.f90  print_impSigma.f90  read_impSigma.f90  rebuild_impG.f90  rebuild_impSigma.f90
src/ED_NONSU2/: CMakeLists.txt  ED_DIAG_NONSU2.f90  ED_GF_NONSU2.f90  ED_HAMILTONIAN_NONSU2.f90  ED_HAMILTONIAN_NONSU2_COMMON.f90  ED_HAMILTONIAN_NONSU2_DIRECT_HxV.f90  ED_HAMILTONIAN_NONSU2_STORED_HxV.f90  ED_OBSERVABLES_NONSU2.f90  g_fix.PATCH
src/ED_NONSU2/direct/: HxVbath.f90  HxVimp.f90  HxVimp_bath.f90  HxVint.f90
src/ED_NONSU2/stored/: Hbath.f90  Himp.f90  Himp_bath.f90  Hint.f90
src/ED_NORMAL/: CMakeLists.txt  ED_CHI_DENS.f90  ED_CHI_EXCT.f90  ED_CHI_PAIR.f90  ED_CHI_SPIN.f90  ED_DIAG_NORMAL.f90  ED_GF_NORMAL.f90  ED_HAMILTONIAN_NORMAL.f90  ED_HAMILTONIAN_NORMAL_COMMON.f90  ED_HAMILTONIAN_NORMAL_DIRECT_HxV.f90  ED_HAMILTONIAN_NORMAL_STORED_HxV.f90  ED_OBSERVABLES_NORMAL.f90  diag_hybr_bath.f90
src/ED_NORMAL/direct/: HxV_dw.f90  HxV_eph.f90  HxV_local.f90  HxV_up.f90
src/ED_NORMAL/direct/Orbs/: HxV_eph.f90  HxV_local.f90
src/ED_NORMAL/direct_mpi/: HxV_dw.f90  HxV_eph.f90  HxV_local.f90  HxV_non_local.f90  HxV_up.f90
src/ED_NORMAL/direct_mpi/Orbs/: HxV_dw.f90  HxV_eph.f90  HxV_local.f90
src/ED_NORMAL/stored/: H_dw.f90  H_e_ph.f90  H_local.f90  H_ph.f90  H_up.f90
src/ED_NORMAL/stored/Orbs/: H_e_ph.f90  H_local.f90
src/ED_SUPERC/: CMakeLists.txt  ED_DIAG_SUPERC.f90  ED_GF_SUPERC.f90  ED_HAMILTONIAN_SUPERC.f90  ED_HAMILTONIAN_SUPERC_COMMON.f90  ED_HAMILTONIAN_SUPERC_DIRECT_HxV.f90  ED_HAMILTONIAN_SUPERC_STORED_HxV.f90  ED_OBSERVABLES_SUPERC.f90
src/ED_SUPERC/direct/: HxV_eph.f90  HxV_ph.f90  HxVbath.f90  HxVimp.f90  HxVimp_bath.f90  HxVint.f90
src/ED_SUPERC/stored/: H_e_ph.f90  H_ph.f90  Hbath.f90  Himp.f90  Himp_bath.f90  Hint.f90
src/python/c_bindings/: edi2py.f90  edi2py_aux_funx.f90  edi2py_bath.f90  edi2py_bath_fit.f90  edi2py_hloc.f90  edi2py_io.f90  edi2py_main.f90  edi2py_read_input.f90
src/python/edipy2/: __init__.py  edi2py.py  func_aux_funx.py  func_bath.py  func_bath_fit.py  func_io.py  func_main.py  func_read_input.py
test/: test.sh
test/python/: hm_bethe.py
test/src/ED_GENERAL/ED_NORMAL/: dens_last.check  ed_general_normal.f90  inputED.in
test/src/ED_GENERAL/ED_SUPERC/: dens_last.check  ed_general_superc.f90  impSelf_l11_s1_iw.momenta.check  inputED.in  phisc_last.check
test/src/ED_NORMAL/ED_NORMAL/: dens_last.check  docc_last.check  ed_normal_normal.f90  energy_last.check  hamiltonian.restart  impSigma_l11_s1_iw.momenta.check  imp_last.check  inputED.in
test/src/ED_NORMAL/ED_SUPERC/: dens_last.check  docc_last.check  ed_normal_superc.f90  energy_last.check  hamiltonian.restart  impSelf_l11_s1_iw.momenta.check  impSigma_l11_s1_iw.momenta.check  impSigma_l11_s1_iw.momenta.new  imp_last.check  inputED.in  phisc_last.check
(+15 files in other folders)
