[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']


[project]
name = 'edipy2'
version = '0.1.0'
description = 'Edipack python API'
authors = [
  {name = 'Lorenzo Crippa', email = 'crippa.lorenzo@gmail.com'},
  {name = 'Adriano Amaricci', email = 'amaricci@sissa.it'},
]

[project.urls]
Repository = "https://github.com/aamaricci/EDIpack.git"