# EDIpack2 library
FILE(GLOB ED_BATH_SRC
  ED_BATH_AUX.f90
  ED_BATH_DIM.f90
  ED_BATH_DMFT.f90
  ED_BATH_USER.f90
  ED_BATH_REPLICA.f90
  ED_BATH_FUNCTIONS.f90
  ED_BATH.f90
  #
  ED_FIT_COMMON.f90
  ED_FIT_NORMAL.f90
  ED_FIT_HYBRID.f90
  ED_FIT_REPLICA.f90
  ED_FIT_GENERAL.f90
  ED_FIT_BATH.f90
  )

ADD_LIBRARY(ED_BATH_LIB OBJECT  ${ED_BATH_SRC})
