# EDIpack2 library
FILE(GLOB ED_NONSU2_LIB_SRC
  ED_HAMILTONIAN_NONSU2_COMMON.f90
  ED_HAMILTONIAN_NONSU2_STORED_HxV.f90
  ED_HAMILTONIAN_NONSU2_DIRECT_HxV.f90
  ED_HAMILTONIAN_NONSU2.f90
  ED_DIAG_NONSU2.f90
  ED_GF_NONSU2.f90
  ED_OBSERVABLES_NONSU2.f90
  )
ADD_LIBRARY(ED_NONSU2_LIB OBJECT  ${ED_NONSU2_LIB_SRC})

